force-app/main/default/objects/APISetting__mdt/APISetting__mdt.object-meta.xml
<CustomObject>
    <description>API Setting custom metadata to manage all API callout information</description>
    <label>APISetting</label>
    <pluralLabel>APISettings</pluralLabel>
</CustomObject>