force-app/main/default/objects/APISetting__mdt/fields/AuthProviderName__c.field-meta.xml
<CustomField>
    <fullName>AuthProviderName__c</fullName>
    <description>Unique name of the auth provider using this MetaType</description>
    <label>Auth Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>