force-app/main/default/objects/APISetting__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Oauth client id, also known as Consumer Key</description>
    <inlineHelpText>Oauth client id, also known as Consumer Key</inlineHelpText>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>