force-app/main/default/objects/APISetting__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description
  >Oauth client secret, also known as Consumer Secret</description>
    <inlineHelpText
  >Oauth client secret, also known as Consumer Secret</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>