force-app/main/default/objects/APISetting__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>End Point</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>