force-app/main/default/objects/APISetting__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the metadata is used or not</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>