force-app/main/default/objects/APISetting__mdt/fields/UseJSONEncoding__c.field-meta.xml
<CustomField>
    <fullName>UseJSONEncoding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the OAuth Flow encode the Request Parameters as JSON?</description>
    <label>Use JSON Encoding</label>
    <type>Checkbox</type>
</CustomField>